<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Activities.HomeScreen">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="280dp"
        android:layout_height="213dp"
        android:layout_marginTop="164dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_btn_home"
        android:layout_width="209dp"
        android:layout_height="50dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/custom_btn"
        android:text="@string/start_game"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/settings_btn_home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/ic_settings"
        app:layout_constraintEnd_toStartOf="@+id/user_btn_home"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/user_btn_home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/info_btn_home"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/info_btn"
        android:text="@string/how_to_play"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>